# projeto_etl_bitcoin

./: README.md  pyproject.toml
src/: pipeline.py
